--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,7 +12,7 @@
   margin: 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 710px) {
   .footer__text {
     width: 282px;
     margin: 0 auto;
