--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,10 +2,10 @@
   min-height: 74px;
   max-width: 880px;
   margin: 0 auto;
-  border-bottom: 1px solid rgba(84, 84, 84, 1);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 710px) {
   .header {
     min-height: 0;
   }
@@ -13,5 +13,7 @@
   .header__logo {
     margin-left: 27px;
     padding-bottom: 32px;
+    width: 126px;
+    height: 24px;
   }
 }
