--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,7 +4,7 @@
   padding: 45px 0 60px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 710px) {
   .page {
     padding: 28px 0 36px;
   }
